# ChangeLog for dev-ruby/uglifier
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/uglifier/ChangeLog,v 1.28 2013/12/21 02:33:21 mrueg Exp $

*uglifier-2.4.0 (21 Dec 2013)

  21 Dec 2013; Manuel Rüger <mrueg@gentoo.org> +uglifier-2.4.0.ebuild,
  -uglifier-2.2.1.ebuild, -uglifier-2.3.0.ebuild, -uglifier-2.3.1.ebuild,
  -uglifier-2.3.2.ebuild:
  Version bump. Cleanup old.

*uglifier-2.3.3 (13 Dec 2013)

  13 Dec 2013; Hans de Graaff <graaff@gentoo.org> +uglifier-2.3.3.ebuild:
  Version bump with UglifyJS 2.4.7.

*uglifier-2.3.2 (02 Dec 2013)

  02 Dec 2013; Hans de Graaff <graaff@gentoo.org> +uglifier-2.3.2.ebuild:
  Version bump.

*uglifier-2.3.1 (09 Nov 2013)

  09 Nov 2013; Manuel Rüger <mrueg@gentoo.org> +uglifier-2.3.1.ebuild:
  Version bump.

*uglifier-2.3.0 (27 Oct 2013)

  27 Oct 2013; Hans de Graaff <graaff@gentoo.org> +uglifier-2.3.0.ebuild:
  Version bump. Add ruby20.

  27 Oct 2013; Hans de Graaff <graaff@gentoo.org> -uglifier-1.3.0.ebuild,
  -uglifier-2.1.1.ebuild, -uglifier-2.1.2.ebuild:
  Cleanup.

*uglifier-2.2.1 (31 Aug 2013)

  31 Aug 2013; Manuel Rüger <mrueg@gentoo.org> +uglifier-2.2.1.ebuild:
  Version bump. Readd ruby18, tests work again.

  24 Aug 2013; Markus Meier <maekke@gentoo.org> uglifier-2.1.2.ebuild:
  add ~x86, bug #472892

*uglifier-2.1.2 (23 Aug 2013)

  23 Aug 2013; Hans de Graaff <graaff@gentoo.org> +uglifier-2.1.2.ebuild:
  Version bump. Drop ruby18 since upstream dropped support for it.

  17 Jul 2013; Markus Meier <maekke@gentoo.org> uglifier-2.1.1.ebuild:
  add ~arm, bug #472892

*uglifier-2.1.1 (10 Jun 2013)

  10 Jun 2013; Hans de Graaff <graaff@gentoo.org> +uglifier-2.1.1.ebuild:
  Version bump.

  22 Apr 2013; Hans de Graaff <graaff@gentoo.org> -uglifier-1.2.7.ebuild:
  Cleanup.

  16 Jan 2013; Rick Farina <zerochaos@gentoo.org> uglifier-1.3.0.ebuild:
  adding ~arm keywords to net-analyzer/metasploit rdeps

*uglifier-1.3.0 (24 Sep 2012)
