@@ -1,6 +1,8 @@
 DIST uglifier-2.3.3.gem 75776 SHA256 79db21bc4670fedd7ee42400349069642aff74920f4d9af1ed4d55c6a0d8856c SHA512 6ce4e8a5a05b3fafbc9246abbe3c828ad5b8eae7592e5615eca1aff771620a62fb9aa622c9afa632a87f8110cebbfa3aec56d65122eda7b02af4e03bb5c88f45 WHIRLPOOL c5b72ce925ce3ba6f92cc99424ecec03165980c6c2ffd5636e98024c2ed4716926116cc336c80268b6d07da501bff81d0c6bc444e731fbb6b75cffaf5e1d4cdf
 DIST uglifier-2.4.0.gem 75776 SHA256 dffa83bb6dedcb5af63888f87d3dd58688b6f79fcf9294efb3fc7649eae38b35 SHA512 dc4d799afbf10db78b898e43640dbb6c9158b89a64acc53b995d927aa1dee9e72e0bbff328e64dea051c3b8143d8b1adf1e7b1d4181ccb844d44e6c2d56aec62 WHIRLPOOL cd7897e1b38e2d7d9ec44cc1b6e8b61f18b3184cc273cb367c7d347ce49b47bbc510bc8ae13f1116f3b12f93458970acc047aa9db089ae1245cd31ec67711b78
+DIST uglifier-2.5.0.gem 76800 SHA256 405cf932fe1b2449c1b3bc4bdf5393e178f75db35a317357786333f4fceb332d SHA512 4423e06d93fffa6072fc63d221eaa8c152b698f38e07b4f54f2622b0cecaae0580d9194510d7b2b60b2b202ff5b3e744d68b3f95ee71acaa8385a96bd2bde96f WHIRLPOOL e9de18bbb6d4cc4cc5d4d98f7d6451ad409aff0cd96e34f206a5809f9490a4dd314311fe3d057fc6dec11de051bfc7b1ca81ba2212f8e9850acd61682c7a1be0
 EBUILD uglifier-2.3.3.ebuild 688 SHA256 6e167dadbf6dac822be74232f00624a1751e53df0e4fb061ea47e3fcf03483be SHA512 960fe0f35d26c6716146c760a2b038dc0dc606247443d101d7dc4c9e96220fabd0d854a8eab605aa17a79b66adc4594719389730a7aaec19afbf7b308de3fb50 WHIRLPOOL 2e3a5633566d59b639d62687812ce99fb313f88206dba4c3c5d85185bed99469b1dfff9924f3b8edb1f055c7ee0c62dcfaf6fcdcd7dda9d3ccbbf558079ff45e
 EBUILD uglifier-2.4.0.ebuild 687 SHA256 f9f47ef6b3d7024673d193ce9858a144c8f066320da4a8d548e2e0d27b683e58 SHA512 9450a064d09ad5bb9d35d53e165ac43e604f09ef5a77e63050079573206e58a4791492df24aba1279d148f90eaf9d665172b54856cdc37465c70677ceba2ed6f WHIRLPOOL 315e6f6275927ddb08ab33479ea9fba27a3a9197f151b9d150650653575e057f3408440d5bef0e1023308cfcb3e88ea8478c789511d85d376b85aace8eceb66c
-MISC ChangeLog 3949 SHA256 7e694943578df89367f18a78474e523a6202dcae1e50feb42964c42c5ce70378 SHA512 8d61d902d03fa3b902534fc5978f60601dec7b5f934c2a48c27c5382372aa80a1cb78cf095f62ddc1ff8a95cd0c727c1a92cc44264ec92336a74c02435afd6ed WHIRLPOOL c42d8cb83a9bbc5f0903280df44d9ce004f77f25f30367b57d755846b4db5e47501feb8e09bd1569a8733b323d0613761c3ef4821a5c0c76a12945c7efa2e910
+EBUILD uglifier-2.5.0.ebuild 680 SHA256 e79948da113a0bd0ef120cb36b5a3c36af3fbe3cc2d8091d6fc40b1ab67b4beb SHA512 fe6a7fe89edb5a8e026f323935144fa44f44150ff426260905da5f2709e5bf38dfa0abc99c2cc94221e5b9ed19e200b466b7be3d0739a1adabadfae85af44eab WHIRLPOOL 11c3ac5926e86f79e035ffc952e26c3f0a6e6497d4cefcb5f1e46efdde81c56e46870d194f4318b31798f05351d62ed57e5e5294a4ca4a21d6b0f73589686646
+MISC ChangeLog 4069 SHA256 9562007fdc014637699b8bc7fab945fa2d93f492b27ed4e79c475ef7cfcc2a31 SHA512 1bf951df5930ad9b287939768b5dfc09e6426285863e914d0bb1efa16c3d0771a3f309637a08c1baf43030766cfc1368dc7a958423792d758884cfdc629ca7a4 WHIRLPOOL 6abcc25f12d59d260e26e7988633a695ac9c4bb12d5bf014cfe0cc9f088776b7407bf444e53c4e8397a07fc6cb40d091d41bed7e1e66dc1bf2c19a5aaf0ca262
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
