@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/uglifier
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/uglifier/ChangeLog,v 1.28 2013/12/21 02:33:21 mrueg Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/uglifier/ChangeLog,v 1.29 2014/03/26 22:23:03 mrueg Exp $
+
+*uglifier-2.5.0 (26 Mar 2014)
+
+  26 Mar 2014; Manuel Rüger <mrueg@gentoo.org> +uglifier-2.5.0.ebuild:
+  Version bump.
 
 *uglifier-2.4.0 (21 Dec 2013)
 
